spec/assets/deployment-with-pvc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ${NAME}
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: ${NAME}
    app.kubernetes.io/component: ${NAMESPACE}
    app.kubernetes.io/instance: ${NAME}
    app.kubernetes.io/name: ${NAME}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${NAME}
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: ${NAME}
      app.kubernetes.io/component: ${NAMESPACE}
      app.kubernetes.io/instance: ${NAME}
      app.kubernetes.io/name: ${NAME}
  template:
    metadata:
      labels:
        app: ${NAME}
        app.kubernetes.io/component: ${NAMESPACE}
        app.kubernetes.io/instance: ${NAME}
        app.kubernetes.io/name: ${NAME}
    spec:
      serviceAccountName: ${NAME}
      securityContext:
        fsGroup: 1007
        runAsGroup: 1007
        runAsUser: 1007
      containers:
      - name: app
        image: ghcr.io/cloudmarius/sample-go-serve-static:0.2.1
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
        volumeMounts:
        - mountPath: /var/www
          name: ${NAME}
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
          requests:
            cpu: 50m
            memory: 32Mi
      volumes:
      - name: ${NAME}
        persistentVolumeClaim:
          claimName: ${NAME}
