spec/assets/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ${ISSUER}
    ingress.kubernetes.io/force-ssl-redirect: "${TLS_ENABLED}"
    kubernetes.io/tls-acme: "${TLS_ENABLED}"
  name: ${NAME}
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${NAME}.${DOMAIN}
    secretName: ${NAME}-tls
  rules:
  - host: ${NAME}.${DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ${NAME}
            port:
              number: 80
